# skills

./: .autocorrectignore  .autocorrectrc  .editorconfig  .gitignore  .ls-lint.yml  .markdownlint-cli2.yaml  .metadata.json  .pre-commit-config.yaml  .shellcheckrc  .typos.toml  AGENTS.md  README.md  _typos.toml  biome.jsonc  prek.toml  pyproject.toml  registry.yaml
.agents/commands/: clean.md  reflect-review.md  repo-prompt-apply-review.md  repo-prompt-build.md  repo-prompt-investigate.md  repo-prompt-oracle-export.md  repo-prompt-reminder.md
.github/: pull_request_template.md
.mise/tasks/: _lib.sh  _task.sh  check-git-config-ci.sh  format.sh  lint.sh
agent-browser/: .skillshare-meta.json
agent-skills/ralph/: SKILL.md
amp-skill-smoke/: SKILL.md
conventional-commits/: .skillshare-meta.json
db-skills/mysql/: SKILL.md
db-skills/postgres/: SKILL.md
exe-dev/: SKILL.md
exe.dev/: .skillshare-meta.json
fasthtml/: SKILL.md
feishu-notify/: SKILL.md
feishu-notify/scripts/: feishu.py
github-runners/: SKILL.md
github-runners/scripts/: remove-runners.sh  setup-runners.sh
lark-base/: .skillshare-meta.json
lark-doc/: .skillshare-meta.json
lark-doc/references/: lark-doc-create.md  lark-doc-xml.md
lark-minutes/: .skillshare-meta.json
lark-openapi-explorer/: .skillshare-meta.json
lark-sheets/: .skillshare-meta.json
lark-skill-maker/: .skillshare-meta.json
linear/: SKILL.md
linear/scripts/: filters.py  sla.py
logfire/: mcp.tpl.json
modal/: SKILL.md  clone_secret.py  concurrency-and-tunnels.md  e2e-testing.md  workspace_image.py
o11y-skills/signoz/: SKILL.md
openai/templates/: responses_create_escape_hatch_extra_body.py  responses_create_streaming.py  responses_create_typed.py  responses_create_typed_with_logfire.py
platform-skills/modal/: e2e-testing.md  example_web.py  workspace_image.py
python-skills/uv/: build.md
ralph/sop/: review-pr.md
reflect/: SKILL.md
signoz/reference/: template.json
skills/agent-browser/: SKILL.md
skills/amp-skill-smoke/: SKILL.md
skills/amp-thread-digest/: SKILL.md
skills/logfire/: SKILL.md
skills/modal/: SKILL.md  clone_secret.py  e2e-testing.md
skills/oracle/: SKILL.md
skills/postgres/: SKILL.md
skills/pr-comments/: SKILL.md
skills/pr-open/: SKILL.md
skills/signoz-dashboard/: SKILL.md
skills/tcg-card-verifier/: SKILL.md
skills/turbopuffer/: SKILL.md
skills/ty/: SKILL.md
skills/uv/: SKILL.md
skillshare/: .skillshare-meta.json
stl-cli/: .skillshare-meta.json
tcg-skills/card-verifier/: SKILL.md
tigris-bucket-management/: .skillshare-meta.json
tigris-object-operations/: .skillshare-meta.json
tigris-snapshots-forking/: .skillshare-meta.json
tigris-snapshots-recovery/: .skillshare-meta.json
turbopuffer/: SKILL.md
turbopuffer/templates/: basic_vector_search.py  batch_upsert.py  conditional_writes.py  hybrid_search.py  multi_tenant.py  schema_optimized.py  verify_writes.py
workflow-skills/feishu/: SKILL.md
xurl/: .skillshare-meta.json
(+189 files in other folders)
