[project]
name = "skills"
version = "0.1.0"
description = "Skills for Amp & Codex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "logfire>=4.27.0",
    "modal>=1.3.5",
    "openai>=2.26.0",
    "torch>=2.10.0",
    "turbopuffer>=1.17.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["BLE001"]
ignore = ["E501", "TID252"]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "TID"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tombi.format.rules]
indent-style = "space"
indent-width = 4

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unresolved-import = "warn"
