[project]
name = "skills"
version = "0.1.0"
description = "Skills for Amp & Codex"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "logfire>=4.31.0",
    "modal>=1.4.1",
    "openai>=2.30.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "turbopuffer>=1.19.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff]
exclude = [
    "agent-browser/",
    "conventional-commits/",
    "exe-dev/",
    "lark-base/",
    "lark-doc/",
    "lark-im/",
    "lark-minutes/",
    "lark-openapi-explorer/",
    "lark-shared/",
    "lark-sheets/",
    "lark-skill-maker/",
    "linear-cli/",
    "skillshare/",
    "stl-cli/",
    "tigris-bucket-management/",
    "tigris-object-operations/",
    "tigris-snapshots-forking/",
    "tigris-snapshots-recovery/",
    "xurl/",
]
indent-width = 4
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["BLE001"]
ignore = ["E501", "TID252"]
select = ["E", "W", "F", "UP", "B", "SIM", "I", "TID"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tombi.format.rules]
indent-style = "space"
indent-width = 4

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
exclude = [
    "agent-browser/",
    "conventional-commits/",
    "exe-dev/",
    "lark-base/",
    "lark-doc/",
    "lark-im/",
    "lark-minutes/",
    "lark-openapi-explorer/",
    "lark-shared/",
    "lark-sheets/",
    "lark-skill-maker/",
    "linear-cli/",
    "skillshare/",
    "stl-cli/",
    "tigris-bucket-management/",
    "tigris-object-operations/",
    "tigris-snapshots-forking/",
    "tigris-snapshots-recovery/",
    "xurl/",
]
